# so.base-n

./: CMakeLists.txt  README.md  example.cpp  package.json  sopa.json
include/: base-n.hpp
source/: CMakeLists.txt  base16_decode.cpp  base16_encode.cpp  base32_decode.cpp  base32_encode.cpp  base64_decode.cpp  base64_encode.cpp  base_codec.hpp  base_decode.hpp  base_encode.hpp
test/: rfc.cpp
